--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
   "license": "MIT",
   "dependencies": {
     "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "reflect-metadata": "^0.1.13",
+    "typescript": "4.9"
   }
 }
