--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@types/react": "^18.2.23",
     "axios": "^1.5.1",
     "jquery": "^3.7.1",
+    "react": "^18.2.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
